View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025470 | Open CASCADE | OCCT:Modeling Algorithms | public | 2014-11-12 16:23 | 2015-05-14 15:32 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.8.0 | ||||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025470: Wrong result of COMMON operation | ||||
Description | Wrong result of COMMON operation between attached shapes. | ||||
Steps To Reproduce | restore S.brep b1 restore T.brep b2 bclearobjects; bcleartools baddobjects b1; baddtools b2 bfillds -s bbop r 0 # the result is empty compound | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg_5(010) bug25470 | ||||
2014-11-12 16:23 developer |
S.brep (572,248 bytes) |
2014-11-12 16:23 developer |
T.brep (525 bytes) |
|
Dear Bugmaster, Could you move the issue to the Open CASCADE project, please. |
|
Branch CR25470 has been created by emv. SHA-1: 369783b0042d9e46e6c850d86ed93af78981c54b Detailed log of new commits: Author: emv Date: Wed Nov 26 18:10:27 2014 +0300 0025470: Wrong result of COMMON operation Fix for correct splitting of infinite faces. |
|
Git branch CR25470 is ready to be reviewed. |
|
Reviewed |
|
Dear BugMaster, Branch CR25470 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 369783b0042d9e46e6c850d86ed93af78981c54b Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 11 (11 on master) Windows: 1 (1 on master) Regressions/Differences: No regressions/differences Testing cases: http://occt-tests.nnov.opencascade.com/CR25470-master-occt/Debian60-64/bugs/modalg_5/bug25470.html http://occt-tests.nnov.opencascade.com/CR25470-master-occt/Windows-32-VC10/bugs/modalg_5/bug25470.html bugs modalg_5(010) bug25470: OK Testing on Linux: occt component : Total MEMORY difference: 359812388 / 359261588 Total CPU difference: 47738.56000000003 / 47823.01999999983 products component : Total MEMORY difference: 111634720 / 112192264 Total CPU difference: 16332.03999999999 / 16025.479999999967 Testing on Windows: occt component : Total MEMORY difference: 274129648 / 273727588 Total CPU difference: 35004.625 / 40219.09375 products component : Total MEMORY difference: 72232608 / 71122820 Total CPU difference: 11515.671875 / 11101.078125 There are no differences in images found by testdiff. |
|
Branch CR25470 has been updated by mkv. SHA-1: f3bb90e2b70b0e1f16e9dbd55e9f21949b310f72 Detailed log of new commits: Author: mkv Date: Thu Nov 27 18:59:03 2014 +0300 Test cases for issue CR25470 |
|
Dear emv, could you please review test case bugs/modalg_5(010)/bug25470 |
|
OK. |
|
Branch CR25470 has been deleted by inv. SHA-1: f3bb90e2b70b0e1f16e9dbd55e9f21949b310f72 |
occt: master d2d9e8dc 2014-11-28 10:25:00
Committer: bugmaster Details Diff |
0025470: Wrong result of COMMON operation Fix for correct splitting of infinite faces. Test cases for issue CR25470 |
Affected Issues 0025470 |
|
mod - src/BOPAlgo/BOPAlgo_BuilderFace.cxx | Diff File | ||
add - tests/bugs/modalg_5/bug25470 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-11-12 16:23 |
|
New Issue | |
2014-11-12 16:23 |
|
Assigned To | => emv |
2014-11-12 16:23 |
|
File Added: S.brep | |
2014-11-12 16:23 |
|
File Added: T.brep | |
2014-11-12 16:24 |
|
Status | new => assigned |
2014-11-13 09:24 |
|
Note Added: 0034382 | |
2014-11-13 11:31 | bugmaster | Project | Salome => Open CASCADE |
2014-11-27 10:30 | git | Note Added: 0034724 | |
2014-11-27 10:32 |
|
Note Added: 0034725 | |
2014-11-27 10:32 |
|
Assigned To | emv => pkv |
2014-11-27 10:32 |
|
Status | assigned => resolved |
2014-11-27 10:49 |
|
Status | resolved => reviewed |
2014-11-27 10:49 |
|
Note Added: 0034726 | |
2014-11-27 10:50 |
|
Assigned To | pkv => mkv |
2014-11-27 18:56 |
|
Note Added: 0034765 | |
2014-11-27 18:59 | git | Note Added: 0034766 | |
2014-11-27 19:00 |
|
Test case number | => bugs modalg_5(010) bug25470 |
2014-11-27 19:00 |
|
Assigned To | mkv => emv |
2014-11-27 19:00 |
|
Status | reviewed => feedback |
2014-11-27 19:01 |
|
Note Added: 0034768 | |
2014-11-27 19:12 |
|
Note Added: 0034771 | |
2014-11-27 19:12 |
|
Assigned To | emv => mkv |
2014-11-27 19:12 |
|
Status | feedback => reviewed |
2014-11-27 19:21 |
|
Assigned To | mkv => bugmaster |
2014-11-27 19:21 |
|
Status | reviewed => tested |
2014-12-01 12:26 | bugmaster | Changeset attached | => occt master d2d9e8dc |
2014-12-01 12:26 | bugmaster | Status | tested => verified |
2014-12-01 12:26 | bugmaster | Resolution | open => fixed |
2015-01-19 16:21 | bugmaster | Target Version | => 6.9.0 |
2015-01-26 12:37 | git | Note Added: 0036613 | |
2015-05-14 15:29 |
|
Status | verified => closed |
2015-05-14 15:32 |
|
Fixed in Version | => 6.9.0 |